--- a/sites/2) oksy Gym/css/main.css
+++ b/sites/2) oksy Gym/css/main.css
@@ -1210,6 +1210,10 @@ header {
   position: relative;
 }
 
+.contacts-wrapper {
+  width: 65%;
+}
+
 .contacts-section .container {
   max-width: 100%;
 }
