--- a/sites/4) fvoice/css/myanimations.css
+++ b/sites/4) fvoice/css/myanimations.css
@@ -1,193 +1,236 @@
 @keyframes PiPhone {
-		  from {
-		    transform: scale(.85);
-		  }
-		  50% {
-		    transform: scale(1.3);
-		  }
-		  to {
-		    transform: scale(.85);
-		  }
+	from {
+		left: 160px;
+		top: -90px;
+	}
+
+	50% {
+		left: 330px;
+		top: -180px;
+	}
+
+	to {
+		left: 160px;
+		top: -90px;
+	}
+}
+
+@keyframes piEllips1 {
+	from {
+		transform: scale(.70);
+	}
+
+	50% {
+		transform: scale(1);
+	}
+
+	to {
+		transform: scale(.70);
+	}
+}
+
+@keyframes piEllips2 {
+	from {
+		transform: scale(.70);
+	}
+
+	50% {
+		transform: scale(1);
+	}
+
+	to {
+		transform: scale(.70);
+	}
+}
+
+@keyframes piAndroid2 {
+	from {
+		opacity: 1;
+	}
+
+	30% {
+		opacity: 0;
+	}
+
+	to {
+		opacity: 1;
+	}
+}
+
+@keyframes pi-ava1 {
+	from {
+		top: -40px;
+		right: 160px;
+	}
+
+	10% {
+		right: 170px;
+		top: -38px;
+	}
+
+	20% {
+		right: 180px;
+		top: -35px;
+	}
+
+	to {
+		top: -40px;
+		right: 160px;
+	}
+}
+
+@keyframes pi-ava2 {
+	from {
+		bottom: 40px;
+		right: 300px;
+	}
+
+	25% {
+		bottom: 45px;
+		right: 350px;
+	}
+
+	50% {
+		bottom: 70px;
+		right: 370px;
+	}
+
+	75% {
+		bottom: 45px;
+		right: 320px;
+	}
+
+	to {
+		bottom: 40px;
+		right: 300px;
+	}
+}
+
+@keyframes pi3-spiral {
+	from {
+		transform: rotate(0deg)
+	}
+
+	to {
+		transform: rotate(360deg)
+	}
+}
+
+@keyframes pi3-phone {
+
+	0%,
+	50%,
+	100% {
+		transform: rotate(0deg);
+	}
+
+	10%,
+	30% {
+		transform: rotate(-10deg);
+	}
+
+	20%,
+	40% {
+		transform: rotate(10deg);
+	}
+}
+
+@keyframes pi4-whatsup {
+	from {
+		top: -60px;
+		right: 260px;
+	}
+
+	50% {
+		right: 310px;
+	}
+
+	to {
+		top: -60px right: 260px;
+	}
+}
+
+@keyframes pi4-twitter {
+	from {
+		bottom: 205px;
+	}
+
+	50% {
+		bottom: 230px;
+	}
+
+	to {
+		bottom: 205px;
+	}
+}
+
+@keyframes pi6-gift {
+	from {
+		transform: translate(0, 0);
+	}
+
+	50% {
+		transform: translate(0, 50px);
+	}
+
+	to {
+		transform: translate(0, 0);
+	}
+}
+
+@keyframes pi6-round {
+	from {
+		transform: translate(0, 0);
+	}
+
+	50% {
+		transform: translate(-50px, 0);
+	}
+
+	to {
+		transform: translate(0, 0);
+	}
+}
+
+@keyframes pulse {
+	from {
+		transform: scale(.85);
+	}
+
+	50% {
+		transform: scale(1);
+	}
+
+	to {
+		transform: scale(.85);
+	}
+}
+
+@media screen and (max-width: 1630px) {
+	@keyframes pi4-twitter {
+		from {
+			top: -40px;
+			right: 160px;
 		}
-		@keyframes piEllips1 {
-		  from {
-		    transform: scale(.70);
-		  }
-		  50% {
-		    transform: scale(1);
-		  }
-		  to {
-		    transform: scale(.70);
-		  }
+
+		25% {
+			top: -30px;
+			right: 260px;
 		}
-		@keyframes piEllips2 {
-		  from {
-		    transform: scale(.70);
-		  }
-		  50% {
-		    transform: scale(1);
-		  }
-		  to {
-		    transform: scale(.70);
-		  }
+
+		50% {
+			top: 15px;
+			right: 360px;
 		}
-		@keyframes piAndroid2 {
-			from{
-				opacity: 1;
-			}
-			30% {
-				opacity: 0;
-			}
-			to{
-				opacity: 1;
-			}
+
+		75% {
+			top: -30px;
+			right: 260px;
 		}
-		@keyframes pi-ava1{
-			from{
-				top: -40px;
-				right: 160px;
-			}
-			25%{
-				top: -30px;
-				right: 260px;
-			}
-			50%{
-				top: 15px;
-				right: 360px;
-			}
-			75%{
-				top: -30px;
-				right: 260px;
-			}
-			to{
-				top: -40px;
-				right: 160px;
-			}
+
+		to {
+			top: -40px;
+			right: 160px;
 		}
-		@keyframes pi-ava2{
-			from{
-				bottom: 40px;
-				right: 300px;
-			}
-			25%{
-				bottom: 45px;
-				right: 350px;
-			}
-			50%{
-				bottom: 70px;
-				right: 370px;
-			}
-			75%{
-				bottom: 45px;
-				right: 320px;
-			}
-			to{
-				bottom: 40px;
-				right: 300px;
-			}
-		}
-		@keyframes pi3-spiral{
-			from{
-				transform: rotate(0deg)
-			}
-			to{
-				transform: rotate(360deg)
-			}
-		}
-		@keyframes pi3-phone{
-			from{
-				bottom: 0;
-				left: 0;
-			}
-			45%{
-				bottom: -30px;
-			}
-			75%{
-				bottom: 30px;
-			}
-			to{
-				bottom: 0;
-				left: 0;
-			}
-		}
-		@keyframes pi4-whatsup{
-			from{
-				top: -60px;
-				right: 260px;
-			}
-			50%{
-				right: 310px;
-			}
-			to{
-				top: -60px
-				right: 260px;
-			}
-		}
-		@keyframes pi4-twitter{
-			from{
-				bottom: 240px;
-			}
-			50%{
-				bottom: 260px;
-			}
-			to{
-				bottom: 240px;
-			}
-		}
-		@keyframes pi6-gift{
-			from{
-				transform: translate(0, 0);
-			}
-			50%{
-				transform: translate(0, 50px);
-			}
-			to{
-				transform: translate(0, 0);
-			}
-		}
-		@keyframes pi6-round{
-			from{
-				transform: translate(0, 0);
-			}
-			50%{
-				transform: translate(-50px, 0);
-			}
-			to{
-				transform: translate(0, 0);
-			}
-		}
-		@keyframes pulse {
-		  from {
-		    transform: scale(.85);
-		  }
-		  50% {
-		    transform: scale(1);
-		  }
-		  to {
-		    transform: scale(.85);
-		  }
-		}
-		@media screen and (max-width: 1630px){
-			@keyframes pi4-twitter{
-				from{
-					top: -40px;
-					right: 160px;
-				}
-				25%{
-					top: -30px;
-					right: 260px;
-				}
-				50%{
-					top: 15px;
-					right: 360px;
-				}
-				75%{
-					top: -30px;
-					right: 260px;
-				}
-				to{
-					top: -40px;
-					right: 160px;
-				}
-			}
-		}
+	}
+}
