--- a/sites/1) new lex/_portfolio interface/pi.css
+++ b/sites/1) new lex/_portfolio interface/pi.css
@@ -13,7 +13,7 @@
     z-index: 999999;
     box-shadow: 0 0 18px 5px rgba(0, 0, 0, 0.3);
     border-radius: 15px 0 0 15px;
-    z-index: 99999999999999999;
+    z-index: 999999;
 }
 
 .yuchoise__menu {
@@ -21,6 +21,7 @@
     right: 0;
     bottom: 15vh;
     padding: 9px;
+    z-index: 999999;
 }
 
 .yuchoise__item {
@@ -80,7 +81,7 @@
     justify-content: center;
     align-items: center;
     position: fixed;
-    z-index: 99999999999;
+    z-index: 99999;
     background: #888;
     left: -100vw;
     transition: 0.2s ease
