--- a/sites/2) oksy matthews/css/media.css
+++ b/sites/2) oksy matthews/css/media.css
@@ -2753,6 +2753,10 @@
   .contacts-content {
     margin-top: 100px;
   }
+
+  .footer-gasfort {
+    display: none;
+  }
 }
 
 @media screen and (max-width: 400px) {
