изменена анимация появления просмотра мобильной версии

--- a/sites/1_new-lex/portfolio-interface/pi.css
+++ b/sites/1_new-lex/portfolio-interface/pi.css
@@ -83,12 +83,14 @@
     position: fixed;
     z-index: 99999;
     background: #888;
-    left: -100vw;
-    transition: 0.2s ease
+    right: 0;
+    top: 0;
+    transition: 0.4s;
+    transform: scale(0);
 }
 
 .yudevices--active.yudevices {
-    left: 0;
+    transform: scale(1);
 }
 
 .yudevices__phone {
