--- a/sites/1_new-lex/css/fonts.css
+++ b/sites/1_new-lex/css/fonts.css
@@ -4,6 +4,7 @@
     src: url('../fonts/Manrope/Manrope-Regular.woff2') format('woff2');
     font-style: normal;
     font-weight: 400;
+    font-display: swap;
 }
 
 @font-face {
@@ -11,6 +12,7 @@
     src: url('../fonts/Manrope/Manrope-SemiBold.woff2') format('woff2');
     font-style: normal;
     font-weight: 600;
+    font-display: swap;
 }
 
 @font-face {
@@ -18,6 +20,7 @@
     src: url('../fonts/Manrope/Manrope-Medium.woff2') format('woff2');
     font-style: normal;
     font-weight: 500;
+    font-display: swap;
 }
 
 @font-face {
@@ -25,4 +28,5 @@
     src: url('../fonts/Manrope/Manrope-Light.woff2') format('woff2');
     font-style: normal;
     font-weight: 300;
+    font-display: swap;
 }
