oksy - пофиксил чутка главное изображение

--- a/sites/2_oksy-matthews/css/main.css
+++ b/sites/2_oksy-matthews/css/main.css
@@ -489,7 +489,7 @@ header {
 }
 
 /* main-section */
-.webp-support .main-section {
+.main-section {
   height: 1400px;
   background-repeat: no-repeat;
   background-position: center center;
