--- a/sites/3_ef/css/fonts.css
+++ b/sites/3_ef/css/fonts.css
@@ -4,6 +4,7 @@
     src: url('../fonts/Inter-Regular.woff2') format('woff');
     font-style: normal;
     font-weight: 400;
+    font-display: swap;
 }
 
 @font-face {
@@ -11,4 +12,5 @@
     src: url('../fonts/Inter-SemiBold.woff2') format('woff');
     font-style: normal;
     font-weight: 600;
+    font-display: swap;
 }
