--- a/sites/3_ef/css/main.css
+++ b/sites/3_ef/css/main.css
@@ -1487,6 +1487,23 @@ img {
 }
 
 /* popup */
+.popup-wrapper {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  background: rgba(0, 0, 0, 0.5);
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+  overflow-y: auto;
+  display: none;
+}
+
+.popup-wrapper--open {
+  display: flex !important;
+}
 
 .popup {
   width: 600px;
@@ -1610,19 +1627,39 @@ img {
   padding: 0 15px;
 }
 
-.mfp-iframe-scaler .mfp-iframe {
-  height: 85vh;
-  top: -150px;
+/* modal styles */
+.modal-overlay {
+  position: fixed;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.7);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  width: 100%;
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.3s ease-in-out;
 }
 
-.mfp-iframe-scaler .mfp-close {
-  opacity: 1;
-  font-size: 60px;
-  z-index: 9999999;
-  color: #000;
-  right: 0;
-  top: -150px;
+.modal {
+  display: none;
 }
+
+.modal-overlay--visible {
+  opacity: 1;
+  visibility: visible;
+  transition: all 0.3s ease-in-out;
+}
+
+.modal--visible {
+  display: block;
+}
+
+
 
 @media screen and (max-width: 650px) {
   .mfp-iframe-scaler .mfp-close {
