--- a/site-preview/main.css
+++ b/site-preview/main.css
@@ -24,12 +24,9 @@ section{
 
 body,
 html {
-	width: 100%;
-	height: 100%;
 	background-color: #222;
 	background: url(img/main-bg.jpg) no-repeat center center/cover;
 	color: #fff;
-	overflow: hidden;
 	line-height: 1.8;
 }
 .logo {
@@ -44,14 +41,20 @@ html {
 
 .sites__box{
 	display: flex;
-	justify-content: space-between;
 	flex-wrap: wrap;
+	gap: 30px 8%;
+	min-height: 100vh;
 }
 
 .site__item{
-	width: 32%;
+	width: 28%;
 	text-align: center;
 	margin-bottom: 25px;
+	transition: 0.2s ease;
+}
+
+.site__item:hover{
+	transform: scale(1.05);
 }
 
 .site__item-img img{
